<resources>
    <string name="app_name">Taboo</string>
    <string name="title_desc">Title in main menu.</string>
    <string name="gauge_desc">Taboo gauge.</string>
    <string name="settings_desc">Settings.</string>
    <string name="play_desc">Play.</string>
    <string name="treasure_desc">Treasures.</string>
    <string name="target_desc">target.</string>
    <string name="bounty_text">0</string>


    <string name="text_collection">Collection</string>
    <string name="btn_top_arrow">Return to main menu.</string>
    <string name="treasure_container">Treasure Container.</string>
    <string name="scroll_view">Scroll.</string>
    <string name="itembox">ItemBox.</string>
    <string name="button_back">Back.</string>
    <string name="treasure_thumbnail">Treasure Thumbnail.</string>
    <string name="treasure_name">Treasure Name.</string>
    <string name="treasure_description">Treasure Description.</string>

    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string-array name="treasureNames">
        <item>Kapre Cigar</item>
        <item>Kapre Cigar</item>
        <item>Kapre Cigar</item>
        <item>Kapre Cigar</item>
        <item>Kapre Cigar</item>
    </string-array>
    <string-array name="treasureBonuses">
        <item>Not Implemented</item>
        <item>Not Implemented</item>
        <item>Not Implemented</item>
        <item>Not Implemented</item>
        <item>Not Implemented</item>
    </string-array>
</resources>