<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/activity_main_img_title"
        android:layout_width="299dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/title_desc"
        app:srcCompat="@drawable/title" />

    <ImageView
        android:id="@+id/activity_main_img_gauge"
        android:layout_width="274dp"
        android:layout_height="277dp"
        android:layout_below="@+id/activity_main_img_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/gauge_desc"
        app:srcCompat="@drawable/taboo_gauge" />

    <LinearLayout
        android:id="@+id/activity_main_btn_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_img_gauge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/activity_main_btn_settings"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@color/clear"
            android:contentDescription="@string/settings_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/settings" />

        <ImageButton
            android:id="@+id/activity_main_btn_play"
            android:layout_width="219dp"
            android:layout_height="110dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@color/clear"
            android:contentDescription="@string/play_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/play" />

        <ImageButton
            android:id="@+id/activity_main_btn_treasure"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@color/clear"
            android:contentDescription="@string/treasure_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/treasures" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_counter_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_main_btn_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="-130dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/activity_main_img_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/target_desc"
            app:srcCompat="@drawable/target_icon" />

        <TextView
            android:id="@+id/activity_main_txt_bounty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_thin"
            android:text="@string/bounty_text"
            android:textColor="@color/counter_red"
            android:textSize="48sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>