<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backdrop1">

    <ImageView
        android:id="@+id/collection_text_iv"
        android:layout_width="254dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:layout_toEndOf="@+id/collection_back_ibtn"
        android:contentDescription="@string/text_collection"
        app:srcCompat="@drawable/text_collection" />

    <ImageButton
        android:id="@+id/collection_back_ibtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/btn_top_arrow"
        android:contentDescription="@string/btn_top_arrow"
        android:rotation="-90" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="533dp"
        android:layout_below="@+id/collection_text_iv"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/treasure_container"
        android:contentDescription="@string/scroll_view"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:scrollbars="none">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</RelativeLayout>